--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -2,21 +2,29 @@
 
 <nav id="sidebar">
 
-    <div class="logo text-center">
-        {{!-- <a href="#"> --}}
-        <div id="brandName">
-            Impact X
+    <div class="logo text-center py-3">
+
+        <div class="media">
+            <div class="media-body">
+                <img src="assets/images/LogoMakr_1WwSOv.png" width="40" height="40" alt="">
+
+                <div id="brandName">
+                    <h4 class="mt-0">Impact X</h4>
+                </div>
+
+
+            </div>
+
         </div>
-        <div> <img src="assets/images/LogoMakr_1WwSOv.png" width="40" height="40" alt=""></div>
 
-
-
-        {{!-- </a> --}}
     </div>
 
 
-    <div class="sidebar-header text-center">
-        <img src={{img}} alt="" id="profileImage">
+    <div class="sidebar-header text-center" id="profileInfo">
+        <div>
+            <img src={{img}} alt="" id="profileImage">
+        </div>
+
 
 
 
