made it so that the nav bar will not have the hover over function for smaller devices

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -408,3 +408,19 @@ label:focus input::placeholder {
   max-width: 22rem;
   height: 150px;
 }
+
+/* @media (max-width: 767.98px) {
+  #sidebar.active {
+    min-width: 90px;
+    max-width: 90px;
+    background: #7a6eb8;
+    color: #fff;
+  }
+
+  #sidebar .sidebar-header h3,
+  #sidebar #profileImage,
+  #sidebar #jobTitle,
+  #sidebar #brandName {
+    display: none;
+  }
+} */
