started working on the the dashboard page and npm i canvasjs

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,11 +6,11 @@
     <div class="content" id="home">
 
 
-        <h1 class="display-3"> Welcome to Dashboard</h1>
+        <h1 class="display-5"> Welcome to Dashboard</h1>
 
         <div class="line"></div>
 
-        <h2>Analytics</h2>
+
         {{!-- <div class="row">
             <div class="col"> <img src="https://apexcharts.com/wp-content/uploads/2018/05/simple-donut-chart.svg"
                     alt=""></div>
@@ -32,87 +32,92 @@
 
         </div> --}}
 
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="card text-white bg-info mb-3 analytics" id="grad1">
 
+                        <div class="card-body">
+                            <div class="media">
+                                <div class="media-body">
+                                    <h3>2345</h3>
+                                    <h6 class="mt-0 mb-1">Total Revenue</h6>
 
-        <div class="row">
-            <div class="col">
-                <div class="card text-white bg-info mb-3 analytics" id="grad1">
-
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <h2>2345</h2>
-                                <h5 class="mt-0 mb-1">Total Revenue</h5>
-
+                                </div>
+                                <h3 class="align-self-center">
+                                    <i class="fas fa-chart-pie"></i>
+                                </h3>
                             </div>
-                            <h2 class="align-self-center">
-                                <i class="fas fa-chart-pie"></i>
-                            </h2>
-                        </div>
 
 
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card text-white bg-info mb-3 analytics" id="grad2">
-
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <h2>2345</h2>
-                                <h5 class="mt-0 mb-1">Total Revenue</h5>
-
-                            </div>
-                            <h2 class="align-self-center">
-                                <i class="fas fa-chart-pie"></i>
-                            </h2>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col">
-                <div class="card text-white bg-info mb-3 analytics" id="grad3">
+                <div class="col">
+                    <div class="card text-white bg-info mb-3 analytics" id="grad2">
 
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <h2>2345</h2>
-                                <h5 class="mt-0 mb-1">Total Revenue</h5>
+                        <div class="card-body">
+                            <div class="media">
+                                <div class="media-body">
+                                    <h3>2345</h3>
+                                    <h6 class="mt-0 mb-1">Total Revenue</h6>
 
+                                </div>
+                                <h3 class="align-self-center ml-2">
+                                    <i class="fas fa-chart-pie"></i>
+                                </h3>
                             </div>
-                            <h2 class="align-self-center">
-                                <i class="fas fa-chart-pie"></i>
-                            </h2>
-                        </div>
-
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card text-white bg-info mb-3 analytics" id="grad4">
-
-                    <div class="card-body">
-                        <div class="media">
-                            <div class="media-body">
-                                <h2>2345</h2>
-                                <h5 class="mt-0 mb-1">Total Revenue</h5>
-
-                            </div>
-                            <h2 class="align-self-center">
-                                <i class="fas fa-chart-pie"></i>
-                            </h2>
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
             </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card text-white bg-info mb-3 analytics" id="grad3">
+
+                        <div class="card-body">
+                            <div class="media">
+                                <div class="media-body">
+                                    <h3>2345</h3>
+                                    <h6 class="mt-0 mb-1">Total Revenue</h6>
+
+                                </div>
+                                <h3 class="align-self-center">
+                                    <i class="fas fa-chart-pie"></i>
+                                </h3>
+                            </div>
 
 
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card text-white bg-info mb-3 analytics" id="grad4">
 
+                        <div class="card-body">
+                            <div class="media">
+                                <div class="media-body">
+                                    <h3>2345</h3>
+                                    <h6 class="mt-0 mb-1">Total Revenue</h6>
 
+                                </div>
+                                <h3 class="align-self-center">
+                                    <i class="fas fa-chart-pie"></i>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
+        <div class="mt-3" id="chartContainer1" style="height: 370px; width: 100%;"></div>
 
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -136,6 +141,8 @@
         <div class="line"></div>
 
 
+        <div id="chartContainer" style="height: 370px; width: 50%;"></div>
+
 
 
 
@@ -145,3 +152,69 @@
 
 
 </div>
+
+
+
+
+
+<script>
+    window.onload = function () {
+
+        var chart1 = new CanvasJS.Chart("chartContainer1", {
+            animationEnabled: true,
+            theme: "light2", // "light1", "light2", "dark1", "dark2"
+            title: {
+                text: "Top Sales Helpers"
+            },
+            axisY: {
+                title: "Goals(SHG)"
+            },
+            data: [{
+                type: "column",
+                showInLegend: true,
+                legendMarkerColor: "grey",
+                legendText: "SHG = Sales Helper Goals",
+                dataPoints: [
+                    { y: 300878, label: "Bob" },
+                    { y: 266455, label: "Sandy" },
+                    { y: 169709, label: "Carol" },
+                    { y: 158400, label: "Trisha" },
+                    { y: 142503, label: "Fabio" },
+                    { y: 101500, label: "Patrick" },
+                    { y: 97800, label: "Adein" },
+                    { y: 80000, label: "Liana" }
+                ]
+            }]
+        });
+        chart1.render();
+
+        var chart = new CanvasJS.Chart("chartContainer", {
+            animationEnabled: true,
+            title: {
+                text: "Desktop Search Engine Market Share - 2016"
+            },
+            data: [{
+                type: "pie",
+                startAngle: 240,
+                yValueFormatString: "##0.00\"%\"",
+                indexLabel: "{label} {y}",
+                dataPoints: [
+                    { y: 79.45, label: "Google" },
+                    { y: 7.31, label: "Bing" },
+                    { y: 7.06, label: "Baidu" },
+                    { y: 4.91, label: "Yahoo" },
+                    { y: 1.26, label: "Others" }
+                ]
+            }]
+        });
+        chart.render();
+
+    }
+
+
+
+</script>
+
+
+
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
