fixed the image size

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -96,8 +96,8 @@
                                 <div class="row">
 
                                     <div class="col-2">
-                                        <label for="inputProfileImg">Profile Image</label> <img src={{img}} width="250"
-                                            height="250" class="img-fluid" id="updatePhoto">
+                                        <label for="inputProfileImg">Profile Image</label> <img src={{img}} width="200"
+                                            height="250" id="updatePhoto">
                                     </div>
                                     <div class="col-10" id="uploadImg" style="display: none;">
                                         {{msg}}
