--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -6,7 +6,7 @@
 
 
 
-        <h2 class="display-4"> <i class="fas fa-cog"></i> Settings</h2>
+        <h3 class="display-4"> <i class="fas fa-cog"></i> Settings</h3>
 
         <div id="accordion">
             <div class="card">
@@ -14,13 +14,14 @@
 
                     <div class="mr-auto">
                         <h5 class="mb-0">
-                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
+                            <button class="btn btn-link p-0" data-toggle="collapse" data-target="#collapseOne"
                                 aria-expanded="true" aria-controls="collapseOne">
-                                <h2>Personal Info</h2>
+                                <h4>Personal Info</h4>
 
                             </button>
-                            <button type="submit" id="updatePersonal" class="btn btn-primary mt-2" style="float: right;"
-                                data-toggle="tooltip" data-placement="top" title="Update Personal Info">Update</button>
+                            <button type="submit" id="updatePersonal" class="btn btn-sm btn-primary mt-1"
+                                style="float: right;" data-toggle="tooltip" data-placement="top"
+                                title="Update Personal Info"><i class="fas fa-pen"></i></button>
 
                         </h5>
 
@@ -54,7 +55,7 @@
 
                                 <button type="submit" class="btn btn-primary" id="saveBtn" style="display: none;">Save
                                     Info</button>
-                                <button type="submit" class="btn btn-warning" id="cancelBtn"
+                                <button type="submit" class="btn btn-secondary" id="cancelBtn"
                                     style="display: none;">Cancel</button>
                             </fieldset>
                         </form>
@@ -69,13 +70,30 @@
 
                     <div class="mr-auto">
                         <h5 class="mb-0">
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+
+                            <div class="media">
+
+                                <div class="media-body">
+                                    <button class="btn btn-link collapsed p-0" data-toggle="collapse"
+                                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        <h4>Profile Info</h>
+
+                                    </button>
+                                    <button type="submit" id="updateProfile" class="btn btn-sm btn-primary mt-1"
+                                        style="float: right;" data-toggle="tooltip" data-placement="top"
+                                        title="Update Profile Info"><i class="fas fa-pen"></i>
+                                    </button>
+
+                                </div>
+                            </div>
+                            {{!-- <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
                                 aria-expanded="false" aria-controls="collapseTwo">
-                                <h2>Profile Info</h2>
+                                <h3>Profile Info</h3>
 
                             </button>
                             <button type="submit" id="updateProfile" class="btn btn-primary mt-2" style="float: right;"
-                                data-toggle="tooltip" data-placement="top" title="Update Profile Info">Update</button>
+                                data-toggle="tooltip" data-placement="top" title="Update Profile Info">Update
+                            </button> --}}
 
                         </h5>
 
@@ -138,12 +156,13 @@
                             <div class="form-row">
                                 <div class="form-group col-md-6">
                                     <label for="inputJobTitle">Job Titile</label>
-                                    <input type="text" class="form-control" id="inputJobTitle" placeholder="Job Title">
+                                    <input type="text" class="form-control" id="inputJobTitle"
+                                        placeholder="Customer Support Specialist" disabled>
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary" id="saveProfile" style="display: none;">Save
                                 Info</button>
-                            <button type="submit" class="btn btn-warning" id="cancelProfile"
+                            <button type="submit" class="btn btn-secondary" id="cancelProfile"
                                 style="display: none;">Cancel</button>
                         </fieldset>
 
