--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -26,7 +26,7 @@
 
 
         <h3>{{currentUser}}</h3>
-        <div id="jobTitle">Sales Representative</div>
+        <div id="jobTitle">Customer Support Specialist</div>
         <strong>{{currentUser.[0]}} </strong>
 
     </div>
