--- a/views/partials/createTicket/create-block.handlebars
+++ b/views/partials/createTicket/create-block.handlebars
@@ -21,7 +21,7 @@
                     </div>
                     <div class="form-group">
                         <label for="message-text" class="col-form-label text-dark">Message:</label>
-                        <textarea class="form-control" id="ticketText" rows="7"></textarea>
+                        <textarea class="form-control" rows="7"></textarea>
                     </div>
                 </form>
             </div>
