--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,28 +11,93 @@
         <div class="line"></div>
 
 
-        {{!-- <div class="row">
-            <div class="col"> <img src="https://apexcharts.com/wp-content/uploads/2018/05/simple-donut-chart.svg"
-                    alt=""></div>
-            <div class="col"> <img src="https://apexcharts.com/wp-content/uploads/2018/05/simple-donut-chart.svg"
-                    alt=""></div>
+
+        <div class="row">
+            <div class="col align-self-center">
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="card text-white bg-info mb-3 analytics" id="grad1">
+
+                            <div class="card-body">
+                                <div class="media">
+                                    <div class="media-body">
+                                        <h3>2345</h3>
+                                        <h6 class="mt-0 mb-1">Total Revenue</h6>
+
+                                    </div>
+                                    <h3 class="align-self-center">
+                                        <i class="fas fa-chart-pie"></i>
+                                    </h3>
+                                </div>
 
 
-        </div> --}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card text-white bg-info mb-3 analytics" id="grad2">
 
+                            <div class="card-body">
+                                <div class="media">
+                                    <div class="media-body">
+                                        <h3>2345</h3>
+                                        <h6 class="mt-0 mb-1">Total Revenue</h6>
 
-        {{!-- <div class="row">
-            <div class="col">
-                <div class="text-center p-0" id="grad1">
-                    <h1><i class="fas fa-envelope-open-text"></i></h1>
+                                    </div>
+                                    <h3 class="align-self-center ml-2">
+                                        <i class="fas fa-chart-pie"></i>
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="card text-white bg-info mb-3 analytics" id="grad3">
+
+                            <div class="card-body">
+                                <div class="media">
+                                    <div class="media-body">
+                                        <h3>2345</h3>
+                                        <h6 class="mt-0 mb-1">Total Revenue</h6>
+
+                                    </div>
+                                    <h3 class="align-self-center">
+                                        <i class="fas fa-chart-pie"></i>
+                                    </h3>
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card text-white bg-info mb-3 analytics" id="grad4">
+
+                            <div class="card-body">
+                                <div class="media">
+                                    <div class="media-body">
+                                        <h3>2345</h3>
+                                        <h6 class="mt-0 mb-1">Total Revenue</h6>
+
+                                    </div>
+                                    <h3 class="align-self-center">
+                                        <i class="fas fa-chart-pie"></i>
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-         
+            <div class="col">
+                <div class="mt-3" id="chartContainer1" style="height: 300px; width: 100%;"></div>
+            </div>
+        </div>
 
-
-        </div> --}}
-
-        <div class="container">
+        {{!-- <div class="container">
             <div class="row">
                 <div class="col-sm">
                     <div class="card text-white bg-info mb-3 analytics" id="grad1">
@@ -70,12 +135,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
             </div>
             <div class="row">
                 <div class="col">
@@ -115,42 +174,21 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> --}}
 
-        <div class="mt-3" id="chartContainer1" style="height: 370px; width: 100%;"></div>
+        {{!-- <div class="mt-3" id="chartContainer1" style="height: 370px; width: 100%;"></div> --}}
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-        </p>
 
         <div class="line"></div>
 
         <div class="row">
             <div class="col">
-                <div id="chartContainer" style="height: 370px; width: 50%;"></div>
+                <div id="chartContainer" style="height: 370px; width:100%;"></div>
             </div>
             <div class="col">
-                <div id="chartContainer3" style="height: 370px; width: 50%;"></div>
+                <div id="chartContainer3" style="height: 370px; width: 100%;"></div>
             </div>
         </div>
-
-
-
 
 
 
@@ -166,6 +204,10 @@
 
 
 <script>
+
+
+
+
     window.onload = function () {
 
         var chart1 = new CanvasJS.Chart("chartContainer1", {
@@ -326,3 +368,5 @@
 
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
