--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -40,11 +40,13 @@
 
                                     <div class="form-group col-md-6">
                                         <label for="inputFirstName">First Name</label>
-                                        <input type="text" class="form-control" placeholder="First name">
+                                        <input type="text" class="form-control" id="inputFirstName"
+                                            placeholder="First name">
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="inputLastName">Last Name</label>
-                                        <input type="text" class="form-control" placeholder="Last name">
+                                        <input type="text" class="form-control" id="inputLastName"
+                                            placeholder="Last name">
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 p-0">
