implemented client PersonalInfo form submit

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -34,7 +34,7 @@
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"
                     active>
                     <div class="card-body">
-                        <form>
+                        <form id="personal_form">
                             <fieldset disabled id="disabledPersonal">
                                 <div class="form-row">
 
