created updatePersonalInfo route

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -59,6 +59,7 @@
                                     Info</button>
                                 <button type="submit" class="btn btn-secondary" id="cancelBtn"
                                     style="display: none;">Cancel</button>
+                                <p id="personal_msg"></p>
                             </fieldset>
                         </form>
                     </div>
