deleted cancel buttons for personInfo

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -57,8 +57,8 @@
 
                                 <button type="submit" class="btn btn-primary" id="saveBtn" style="display: none;">Save
                                     Info</button>
-                                <button type="submit" class="btn btn-secondary" id="cancelBtn"
-                                    style="display: none;">Cancel</button>
+                                {{!-- <button type="submit" class="btn btn-secondary" id="cancelBtn"
+                                    style="display: none;">Cancel</button> --}}
                                 <p id="personal_msg"></p>
                             </fieldset>
                         </form>
