added Current password input and post profile info

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -147,6 +147,14 @@
 
 
                             <br>
+
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="inputCurrentPassword4">Current Password</label>
+                                    <input type="password" class="form-control" id="inputCurrentPassword4"
+                                        placeholder="Current Password">
+                                </div>
+                            </div>
                             <div class="form-row">
                                 <div class="form-group col-md-6">
                                     <label for="inputPassword4">Password</label>
@@ -164,8 +172,9 @@
                             </div>
                             <button type="submit" class="btn btn-primary" id="saveProfile" style="display: none;">Save
                                 Info</button>
-                            <button type="submit" class="btn btn-secondary" id="cancelProfile"
-                                style="display: none;">Cancel</button>
+                            <p id="profile_msg"></p>
+                            {{!-- <button type="submit" class="btn btn-secondary" id="cancelProfile"
+                                style="display: none;">Cancel</button> --}}
                         </fieldset>
 
 
