created contacts template

--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -41,9 +41,9 @@
 
         </li>
         <li>
-            <a href="#contact" id="contactBtn">
+            <a href="/contacts" id="contactBtn">
                 <i class="fas fa-address-card"></i>
-                <span class="btnName">Contact</span>
+                <span class="btnName">Contacts</span>
             </a>
             </a>
         </li>
