--- a/views/contacts.handlebars
+++ b/views/contacts.handlebars
@@ -4,7 +4,23 @@
     <div class="content" id="ticket">
 
 
-        <h2 class="display-4">Contacts</h2>
+        <h2 class="display-4"><i class="fas fa-address-card"></i>Contacts</h2>
+        <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="Specialists-tab" data-toggle="tab" href="#Specialists" role="tab"
+                    aria-controls="Specialists" aria-selected="true">Specialists</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="Customers-tab" data-toggle="tab" href="#Customers" role="tab"
+                    aria-controls="Customers" aria-selected="false">Customers</a>
+            </li>
+        </ul>
 
+        <div class="tab-content">
+            <div class="tab-pane active" id="Specialists" role="tabpanel" aria-labelledby="Specialists-tab">Specialists
+            </div>
+            <div class="tab-pane" id="Customers" role="tabpanel" aria-labelledby="Customers-tab">Customers</div>
+        </div>
     </div>
 </div>
+<script src="/assets/js/contacts.js"></script>
