--- a/views/contacts.handlebars
+++ b/views/contacts.handlebars
@@ -17,9 +17,45 @@
         </ul>
 
         <div class="tab-content">
-            <div class="tab-pane active" id="Specialists" role="tabpanel" aria-labelledby="Specialists-tab">Specialists
+            <div class="tab-pane active" id="Specialists" role="tabpanel" aria-labelledby="Specialists-tab"><br>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Email</th>
+                        </tr>
+                    </thead>
+                    <tbody id="Specialists_table">
+
+                    </tbody>
+
+                </table>
             </div>
-            <div class="tab-pane" id="Customers" role="tabpanel" aria-labelledby="Customers-tab">Customers</div>
+            <div class="tab-pane" id="Customers" role="tabpanel" aria-labelledby="Customers-tab"><br>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Phone</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">City</th>
+                            <th scope="col">State</th>
+                            <th scope="col">Zip Code</th>
+
+
+                        </tr>
+                    </thead>
+                    <tbody id="Customers_table">
+
+                    </tbody>
+
+                </table>
+            </div>
         </div>
     </div>
 </div>
