--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,9 +11,66 @@
         <div class="line"></div>
 
 
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="month">
+                        <ul>
+                            <li class="prev">&#10094;</li>
+                            <li class="next">&#10095;</li>
+                            <li>
+                                August<br>
+                                <span style="font-size:18px">2017</span>
+                            </li>
+                        </ul>
+                    </div>
 
-        <div class="row">
-            <div class="col align-self-center">
+                    <ul class="weekdays">
+                        <li>Mo</li>
+                        <li>Tu</li>
+                        <li>We</li>
+                        <li>Th</li>
+                        <li>Fr</li>
+                        <li>Sa</li>
+                        <li>Su</li>
+                    </ul>
+
+                    <ul class="days">
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                        <li>5</li>
+                        <li>6</li>
+                        <li>7</li>
+                        <li>8</li>
+                        <li>9</li>
+                        <li><span class="active">10</span></li>
+                        <li>11</li>
+                        <li>12</li>
+                        <li>13</li>
+                        <li>14</li>
+                        <li>15</li>
+                        <li>16</li>
+                        <li>17</li>
+                        <li>18</li>
+                        <li>19</li>
+                        <li>20</li>
+                        <li>21</li>
+                        <li>22</li>
+                        <li>23</li>
+                        <li>24</li>
+                        <li>25</li>
+                        <li>26</li>
+                        <li>27</li>
+                        <li>28</li>
+                        <li>29</li>
+                        <li>30</li>
+                        <li>31</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col align-self-center mt-4">
                 <div class="row">
                     <div class="col-sm">
                         <div class="card text-white bg-info mb-3 analytics" id="grad1">
@@ -92,103 +149,31 @@
                 </div>
 
             </div>
-            <div class="col">
-                <div class="mt-3" id="chartContainer1" style="height: 300px; width: 100%;"></div>
-            </div>
+
         </div>
 
-        {{!-- <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <div class="card text-white bg-info mb-3 analytics" id="grad1">
 
-                        <div class="card-body">
-                            <div class="media">
-                                <div class="media-body">
-                                    <h3>2345</h3>
-                                    <h6 class="mt-0 mb-1">Total Revenue</h6>
-
-                                </div>
-                                <h3 class="align-self-center">
-                                    <i class="fas fa-chart-pie"></i>
-                                </h3>
-                            </div>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card text-white bg-info mb-3 analytics" id="grad2">
-
-                        <div class="card-body">
-                            <div class="media">
-                                <div class="media-body">
-                                    <h3>2345</h3>
-                                    <h6 class="mt-0 mb-1">Total Revenue</h6>
-
-                                </div>
-                                <h3 class="align-self-center ml-2">
-                                    <i class="fas fa-chart-pie"></i>
-                                </h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="card text-white bg-info mb-3 analytics" id="grad3">
-
-                        <div class="card-body">
-                            <div class="media">
-                                <div class="media-body">
-                                    <h3>2345</h3>
-                                    <h6 class="mt-0 mb-1">Total Revenue</h6>
-
-                                </div>
-                                <h3 class="align-self-center">
-                                    <i class="fas fa-chart-pie"></i>
-                                </h3>
-                            </div>
-
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card text-white bg-info mb-3 analytics" id="grad4">
-
-                        <div class="card-body">
-                            <div class="media">
-                                <div class="media-body">
-                                    <h3>2345</h3>
-                                    <h6 class="mt-0 mb-1">Total Revenue</h6>
-
-                                </div>
-                                <h3 class="align-self-center">
-                                    <i class="fas fa-chart-pie"></i>
-                                </h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> --}}
-
-        {{!-- <div class="mt-3" id="chartContainer1" style="height: 370px; width: 100%;"></div> --}}
 
 
         <div class="line"></div>
 
-        <div class="row">
-            <div class="col">
-                <div id="chartContainer" style="height: 370px; width:100%;"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+
+                    <div id="donutchart" style="width: 100%; height: 500px;"></div>
+                </div>
+                <div class="col">
+                    <div id="top_x_div" style=" height: 500px;"></div>
+                </div>
             </div>
-            <div class="col">
-                <div id="chartContainer3" style="height: 370px; width: 100%;"></div>
-            </div>
+
         </div>
+
+
+
+        <br>
+
 
 
 
@@ -199,174 +184,119 @@
 
 </div>
 
+<style>
+
+
+</style>
+
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script src="/assets/js/charts.js"></script>
 
 
 
-
-<script>
-
-
-
-
-    window.onload = function () {
-
-        var chart1 = new CanvasJS.Chart("chartContainer1", {
-            animationEnabled: true,
-            theme: "light2", // "light1", "light2", "dark1", "dark2"
-            title: {
-                text: "Top Sales Helpers"
-            },
-            axisY: {
-                title: "Goals(SHG)"
-            },
-            data: [{
-                type: "column",
-                showInLegend: true,
-                legendMarkerColor: "grey",
-                legendText: "SHG = Sales Helper Goals",
-                dataPoints: [
-                    { y: 300878, label: "Bob" },
-                    { y: 266455, label: "Sandy" },
-                    { y: 169709, label: "Carol" },
-                    { y: 158400, label: "Trisha" },
-                    { y: 142503, label: "Fabio" },
-                    { y: 101500, label: "Patrick" },
-                    { y: 97800, label: "Adein" },
-                    { y: 80000, label: "Liana" }
-                ]
-            }]
-        });
-        chart1.render();
-
-        var chart = new CanvasJS.Chart("chartContainer", {
-            animationEnabled: true,
-            title: {
-                text: "Desktop Search Engine Market Share - 2016"
-            },
-            data: [{
-                type: "pie",
-                startAngle: 240,
-                yValueFormatString: "##0.00\"%\"",
-                indexLabel: "{label} {y}",
-                dataPoints: [
-                    { y: 79.45, label: "Google" },
-                    { y: 7.31, label: "Bing" },
-                    { y: 7.06, label: "Baidu" },
-                    { y: 4.91, label: "Yahoo" },
-                    { y: 1.26, label: "Others" }
-                ]
-            }]
-        });
-        chart.render();
-
-        var chart3 = new CanvasJS.Chart("chartContainer3", {
-            animationEnabled: true,
-            title: {
-                text: "Monthly Expenses, 2016-17"
-            },
-            axisY: {
-                includeZero: false,
-                prefix: "$"
-            },
-            toolTip: {
-                shared: true
-            },
-            legend: {
-                fontSize: 13
-            },
-            data: [{
-                type: "splineArea",
-                showInLegend: true,
-                name: "Salaries",
-                yValueFormatString: "$#,##0",
-                xValueFormatString: "MMM YYYY",
-                dataPoints: [
-                    { x: new Date(2016, 2), y: 30000 },
-                    { x: new Date(2016, 3), y: 35000 },
-                    { x: new Date(2016, 4), y: 30000 },
-                    { x: new Date(2016, 5), y: 30400 },
-                    { x: new Date(2016, 6), y: 20900 },
-                    { x: new Date(2016, 7), y: 31000 },
-                    { x: new Date(2016, 8), y: 30200 },
-                    { x: new Date(2016, 9), y: 30000 },
-                    { x: new Date(2016, 10), y: 33000 },
-                    { x: new Date(2016, 11), y: 38000 },
-                    { x: new Date(2017, 0), y: 38900 },
-                    { x: new Date(2017, 1), y: 39000 }
-                ]
-            },
-            {
-                type: "splineArea",
-                showInLegend: true,
-                name: "Office Cost",
-                yValueFormatString: "$#,##0",
-                dataPoints: [
-                    { x: new Date(2016, 2), y: 20100 },
-                    { x: new Date(2016, 3), y: 16000 },
-                    { x: new Date(2016, 4), y: 14000 },
-                    { x: new Date(2016, 5), y: 18000 },
-                    { x: new Date(2016, 6), y: 18000 },
-                    { x: new Date(2016, 7), y: 21000 },
-                    { x: new Date(2016, 8), y: 22000 },
-                    { x: new Date(2016, 9), y: 25000 },
-                    { x: new Date(2016, 10), y: 23000 },
-                    { x: new Date(2016, 11), y: 25000 },
-                    { x: new Date(2017, 0), y: 26000 },
-                    { x: new Date(2017, 1), y: 25000 }
-                ]
-            },
-            {
-                type: "splineArea",
-                showInLegend: true,
-                name: "Entertainment",
-                yValueFormatString: "$#,##0",
-                dataPoints: [
-                    { x: new Date(2016, 2), y: 10100 },
-                    { x: new Date(2016, 3), y: 6000 },
-                    { x: new Date(2016, 4), y: 3400 },
-                    { x: new Date(2016, 5), y: 4000 },
-                    { x: new Date(2016, 6), y: 9000 },
-                    { x: new Date(2016, 7), y: 3900 },
-                    { x: new Date(2016, 8), y: 4200 },
-                    { x: new Date(2016, 9), y: 5000 },
-                    { x: new Date(2016, 10), y: 14300 },
-                    { x: new Date(2016, 11), y: 12300 },
-                    { x: new Date(2017, 0), y: 8300 },
-                    { x: new Date(2017, 1), y: 6300 }
-                ]
-            },
-            {
-                type: "splineArea",
-                showInLegend: true,
-                yValueFormatString: "$#,##0",
-                name: "Maintenance",
-                dataPoints: [
-                    { x: new Date(2016, 2), y: 1700 },
-                    { x: new Date(2016, 3), y: 2600 },
-                    { x: new Date(2016, 4), y: 1000 },
-                    { x: new Date(2016, 5), y: 1400 },
-                    { x: new Date(2016, 6), y: 900 },
-                    { x: new Date(2016, 7), y: 1000 },
-                    { x: new Date(2016, 8), y: 1200 },
-                    { x: new Date(2016, 9), y: 5000 },
-                    { x: new Date(2016, 10), y: 1300 },
-                    { x: new Date(2016, 11), y: 2300 },
-                    { x: new Date(2017, 0), y: 2800 },
-                    { x: new Date(2017, 1), y: 1300 }
-                ]
-            }]
-        });
-        chart3.render();
-
+<style>
+    * {
+        box-sizing: border-box;
     }
 
+    ul {
+        list-style-type: none;
+    }
 
+    body {
+        font-family: Verdana, sans-serif;
+    }
 
+    .month {
+        padding: 70px 25px;
+        width: 100%;
+        background: #1abc9c;
+        text-align: center;
+    }
 
-</script>
+    .month ul {
+        margin: 0;
+        padding: 0;
+    }
 
+    .month ul li {
+        color: white;
+        font-size: 20px;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+    }
 
+    .month .prev {
+        float: left;
+        padding-top: 10px;
+    }
 
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-<script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
+    .month .next {
+        float: right;
+        padding-top: 10px;
+    }
+
+    .weekdays {
+        margin: 0;
+        padding: 10px 0;
+        background-color: #ddd;
+    }
+
+    .weekdays li {
+        display: inline-block;
+        width: 13.6%;
+        color: #666;
+        text-align: center;
+    }
+
+    .days {
+        padding: 10px 0;
+        background: #eee;
+        margin: 0;
+    }
+
+    .days li {
+        list-style-type: none;
+        display: inline-block;
+        width: 13.6%;
+        text-align: center;
+        margin-bottom: 5px;
+        font-size: 12px;
+        color: #777;
+    }
+
+    .days li .active {
+        padding: 5px;
+        background: #1abc9c;
+        color: white !important
+    }
+
+    /* Add media queries for smaller screens */
+    /*  @media screen and (max-width:720px) {
+
+        .weekdays li,
+        .days li {
+            width: 13.1%;
+        }
+    }
+
+    @media screen and (max-width: 420px) {
+
+        .weekdays li,
+        .days li {
+            width: 12.5%;
+        }
+
+        .days li .active {
+            padding: 2px;
+        }
+    }
+
+    @media screen and (max-width: 290px) {
+
+        .weekdays li,
+        .days li {
+            width: 12.2%;
+        }
+    }*/
+</style>
