--- a/views/contacts.handlebars
+++ b/views/contacts.handlebars
@@ -1,7 +1,7 @@
 <div class="wrapper">
     {{> navbar/nav-block}}
 
-    <div class="content" id="ticket">
+    <div class="content" id="contacts">
 
 
         <h2 class="display-4"><i class="fas fa-address-card"></i>Contacts</h2>
