made a style change on the dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,7 +13,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col mb-3">
                     <div class="month">
                         <ul>
                             <li class="prev">&#10094;</li>
@@ -70,7 +70,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col align-self-center mt-4">
+            <div class="col align-self-center">
                 <div class="row">
                     <div class="col-sm">
                         <div class="card text-white bg-info mb-3 analytics" id="grad1">
